# waf-log-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
src/waf_log_detector/: cli.py  detector.py
tests/: test_detector.py
