[project]
name = "waf-log-detector"
version = "0.1.0"
description = "Defensive HTTP access-log detector for common web attack indicators"
requires-python = ">=3.11"

[project.scripts]
waf-log-detector = "waf_log_detector.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
